fix: pdf table header alignment issue

--- a/apps/client/src/features/editor/styles/table.css
+++ b/apps/client/src/features/editor/styles/table.css
@@ -163,8 +163,17 @@
 
 @media print {
   .tableWrapper.tableHeaderPinned table tr:first-child {
-    position: static;
-    transform: none;
+    position: static !important;
+    top: auto !important;
+    transform: none !important;
+  }
+
+  .tableReadonlySortChevron {
+    display: none !important;
+  }
+
+  .ProseMirror table th:has(.tableReadonlySortChevron) {
+    padding-right: 5px;
   }
 }
 
